
ENABLE_LANGUAGE(CXX)

FIND_PACKAGE(Qt4 REQUIRED QtCore QtGui)
INCLUDE( ${QT_USE_FILE} )

IF(WIN32)
  SET (QT_USE_QTMAIN TRUE)
ENDIF(WIN32)

SET( SOURCES main.cpp aaxplayer.cpp )
SET( PREPROCESS_HEADERS aaxplayer.h )
SET( HEADERS aaxplayer_ui.h )
SET( GUI aaxplayer.ui )
SET( RCS aaxplayer.qrc )

QT4_ADD_RESOURCES(RC_SRCS ${RCS})
QT4_WRAP_UI( GUI_HDRS ${GUI} )
QT4_WRAP_CPP( MOC_HEADERS ${PREPROCESS_HEADERS} )


ADD_EXECUTABLE(aaxplayer ${SOURCES} ${MOC_HEADERS} ${RC_SRCS} ${GUI_HEADERS} )

TARGET_LINK_LIBRARIES( aaxplayer ${QT_LIBRARIES} ${AAX_LIBRARY})

INSTALL(TARGETS aaxplayer
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT Applications
)

IF(WIN32)
  # Include Qt libraries
  CMP_QT_LIBRARIES_INSTALL_RULES("QtCore;QtGui" "bin")
  INSTALL_CUSTOM_LIB(${AAX_LIBRARY} "bin")
ENDIF(WIN32)

