
set(LIBBASE base)
set(LIBMIDI midi)

set( DRIVER_OBJS
     driver.c
     wavfile.c
   )

set(LIBDRIVER driver)
ADD_LIBRARY(${LIBDRIVER} ${LIBTYPE} ${DRIVER_OBJS} ${AAX_LIBRARY})

FUNCTION(CREATE_UTIL TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBBASE} ${LIBDRIVER} ${AAX_LIBRARY} ${XML_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()

FUNCTION(CREATE_CPP_UTIL TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBBASE} ${LIBDRIVER} ${AAX_LIBRARY} ${LIBMIDI} ${XML_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()


CREATE_UTIL(aaxinfo)
INSTALL(TARGETS aaxinfo
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)
CREATE_UTIL(aaxplay)
INSTALL(TARGETS aaxplay
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)
CREATE_UTIL(aaxcvt)
INSTALL(TARGETS aaxcvt
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)
CREATE_UTIL(drawbar2aaxs)
INSTALL(TARGETS drawbar2aaxs
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)

CREATE_CPP_UTIL(aaxplaymidi)
INSTALL(TARGETS aaxplaymidi
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)

if(HAVE_EBUR128)
  SET(EXTRA_LIBS "${EBUR128_LIBRARY} ${EXTRA_LIBS}")
  CREATE_UTIL(aaxsstandardize)
  INSTALL(TARGETS aaxsstandardize
          RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
          COMPONENT Applications
  )
}
