
set(LIBBASE base)
set(LIBMIDI midi)

set( DRIVER_OBJS
     driver.c
     wavfile.c
   )

set(LIBDRIVER driver)
ADD_LIBRARY(${LIBDRIVER} ${LIBTYPE} ${DRIVER_OBJS} ${AAX_LIBRARY})

FUNCTION(CREATE_UTIL TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBBASE} ${LIBDRIVER} ${AAX_LIBRARY} ${XML_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()

FUNCTION(CREATE_CPP_UTIL TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBBASE} ${LIBDRIVER} ${LIBMIDI} ${AAX_LIBRARY} ${XML_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()


CREATE_UTIL(aaxinfo)
install(TARGETS aaxinfo
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)
CREATE_UTIL(aaxplay)
install(TARGETS aaxplay
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)
CREATE_UTIL(aaxcvt)
install(TARGETS aaxcvt
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)
CREATE_UTIL(drawbar2aaxs)
install(TARGETS drawbar2aaxs
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)

CREATE_CPP_UTIL(aaxplaymidi)
if (GCC OR CLANG)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
endif(GCC OR CLANG)
install(TARGETS aaxplaymidi
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Applications
)

if(HAVE_EBUR128)
  CREATE_UTIL(aaxsstandardize)
  target_link_libraries(aaxsstandardize "${EBUR128_LIBRARY}")
  install(TARGETS aaxsstandardize
          RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
          COMPONENT Applications
  )
  install(FILES "${EBUR128_LIBRARY}"
	  DESTINATION "${CMAKE_INSTALL_BINDIR}"
          COMPONENT Applications)
endif()
