
CHECK_LIBRARY_EXISTS(m floorf "" HAVE_LIBM)
IF(HAVE_LIBM)
  SET(EXTRA_LIBS m ${EXTRA_LIBS})
ENDIF(HAVE_LIBM)

IF(WIN32)
SET(KERNEL_LIBRARY Kernel32)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
SET(EXTRA_LIBS "${EXTRA_LIBS} ${LIBDRIVER}")

FUNCTION(CREATE_CPP_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.cpp)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${AAX_LIBRARY} ${KERNEL_LIBRARY} ${EXTRA_LIBS})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()

CREATE_CPP_TEST(aaxinfo++)
CREATE_CPP_TEST(aaxplay++)
